--- a/data/hero.yml
+++ b/data/hero.yml
@@ -1,6 +1,6 @@
 ---
 enable: true
-title: Xuất khẩu lao động, tạo cơ hội cho tương lai
+title: Lao động Nhật Bản, tạo cơ hội cho tương lai
 caption: VIETNAM PEACE
 description: Trung tâm đào tạo nguồn nhân lực xuất khẩu lao động Nhật Bản. Xuất khẩu lao động Nhật Bản, tạo ra cơ hội để đạt được ước mơ của bạn.
 buttonName: Tư vấn
