--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/vnhb"]
 	path = themes/vnhb
-	url = https://github.com/StaticMania/hugo-apsho.git
+	url = https://github.com/xkldnhat/xkld.git
